hphp/hack/test/typecheck/lambda/lambda_apply.php.like_types.exp
File "lambda_apply.php", line 5, characters 13-14:
Invalid argument (Typing[4110])
File "lambda_apply.php", line 4, characters 33-33:
Expected T
File "lambda_apply.php", line 4, characters 45-45:
But got dynamic because it is an unenforceable type
File "lambda_apply.php", line 9, characters 13-14:
Invalid argument (Typing[4110])
File "lambda_apply.php", line 8, characters 42-42:
Expected T
File "lambda_apply.php", line 8, characters 26-26:
But got dynamic because it is an unenforceable type
File "lambda_apply.php", line 16, characters 20-21:
No method 'fo' in C (did you mean 'foo'?) (Typing[4053])
File "lambda_apply.php", line 16, characters 30-30:
This is why I think it is an object of type C
File "lambda_apply.php", line 12, characters 7-7:
Declaration of C is here
File "lambda_apply.php", line 17, characters 32-33:
No method 'fo' in C (did you mean 'foo'?) (Typing[4053])
File "lambda_apply.php", line 17, characters 16-16:
This is why I think it is an object of type C
File "lambda_apply.php", line 12, characters 7-7:
Declaration of C is here
